--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reddit",
+  "name": "invoice",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.3",
+    "firebase": "^9.8.4",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.3.16",
     "next": "12.1.6",
+    "next-auth": "^4.8.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.42",
